perubahan nama html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <p>Nama: Oliver Scott Sykes</p>
                 <p>Lahir: 20 November 1986 (umur 36) Ashford,Yorkshire Selatan, Inggris</p>
                 <p>Pekerjaan: Musisi,penyanyi,pencipta,lagu,pengusaha,desainer,pakaian</p>
+                <p>ASAL: Bandung barat</p>
             </aside>
         </div>
         <div class="profile">
